--- a/Rotten Tomatoes/Base.lproj/Main.storyboard
+++ b/Rotten Tomatoes/Base.lproj/Main.storyboard
@@ -25,10 +25,13 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <searchBar contentMode="redraw" text="" id="MSG-4d-Ywz">
+                            <searchBar contentMode="redraw" text="" showsCancelButton="YES" id="MSG-4d-Ywz">
                                 <rect key="frame" x="0.0" y="65" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="icQ-0m-0Js"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="102" sectionHeaderHeight="22" sectionFooterHeight="22" id="l00-SB-fy1">
                                 <rect key="frame" x="0.0" y="109" width="320" height="459"/>
@@ -77,6 +80,7 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="kQf-UG-356"/>
                     <connections>
@@ -86,6 +90,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="igP-D5-ukc"/>
             </objects>
             <point key="canvasLocation" x="734" y="320"/>
         </scene>
